# fastApi-todo-sqlite

./: README.md  pyproject.toml
api_todo/: create_db.py  database.py  main.py  models.py  todo.db  todo.db-journal
